# connect-team-form-fillup

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  background.js  gdrive.js  manifest.json  package-lock.json  package.json  popup.css  popup.html  popup.js  tab.css  tab.html  tab.js  theme.css
.github/workflows/: ci-desktop.yml  release-android.yml  release-linux.yml  release-macos.yml  release-windows.yml
desktop/: ARCHITECTURE.md  README.md  build-linux.sh  build-macos.sh  build-windows.ps1  index.html  package-lock.json  package.json  vite.config.js
desktop/src/: App.svelte  app.css
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: gdrive.rs  lib.rs  main.rs
desktop/src/components/: AddEntryModal.svelte  Confirm.svelte
desktop/src/lib/: constants.js  fillout-api.js  fillout-inject.js  gdrive.js  names.js  stats.js  store.svelte.js  time.js  timer.js
desktop/src/pages/: Projects.svelte  Reports.svelte  Settings.svelte  Timer.svelte  Timesheet.svelte
desktop/tests/: lib.test.js
docs/superpowers/plans/: 2026-07-10-dashboard-tab-view.md
docs/superpowers/specs/: 2026-07-10-dashboard-tab-view-design.md
test/: smoke.js
test/fixtures/: form.html
