[package]
name = "team-timesheet"
version = "0.1.0"
description = "Trackabi-style desktop time tracker with Fillout auto-fill"
authors = ["Md Ashraful Islam"]
edition = "2021"

[lib]
name = "team_timesheet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"

[profile.release]
codegen-units = 1
lto = true
strip = true
